2005-07-12  Matthias Clasen  <mclasen@redhat.com>

	* tests/testcairo.c (draw): Fix the same confusion here, too.

	* gdk/gdkgc.c (make_stipple_tile_surface): Fix 
	cairo_content_t <-> cairo_format_t confusion.  (#310086,
	Carlos Garnacho Parro)

	* gtk/gtkfilesystemunix.c 
	(gtk_file_system_unix_volume_get_display_name): Follow
	the Nautilus change and rename "Filesystem" to "File System",
	string change.  (#310047, Vincent Noel)
	
2005-07-12  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/iconview.c: Rename this demo.

	* demos/gtk-demo/iconview_edit.c: Add a demo for icon view
	editing and drag-and-drop.

	* demos/gtk-demo/geninclude.pl.in: Accept dashes in demo titles.

2005-07-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/theme-bits/decompose-bits.c: 
	* gtk/gtkfilechooserembed.c: 
	* gtk/gtktextmarkprivate.h: 
	* gtk/gtktexttagtable.h: 
	* gtk/gtktexttagtable.c: 
	* gtk/gtkrc.key.emacs: Add Copyright/License information.

	* gdk/linux-fb/gdkrender-fb.c: 
	* gdk/linux-fb/gdkpango-fb.c: 
	* gdk/linux-fb/gdkdrawable-fb2.c: 
	* gdk/linux-fb/gdkgc-fb.c: 
	* gdk/linux-fb/gdkfbswitch.c: Add Copyright/License information.

	* gdk/gdkwindow.h: 
	* gdk/gdkvisual.h: 
	* gdk/gdkselection.h: 
	* gdk/gdkselection.c: 
	* gdk/gdkregion.h: 
	* gdk/gdkproperty.h: 
	* gdk/gdkpixmap.h: 
	* gdk/gdkpixbuf.h: 
	* gdk/gdkkeyuni.c: 
	* gdk/gdkintl.h: 
	* gdk/gdkinput.h: 
	* gdk/gdkimage.h: 
	* gdk/gdkgc.h: 
	* gdk/gdkfont.h: 
	* gdk/gdkevents.h: 
	* gdk/gdkdnd.h: 
	* gdk/gdkcursor.h: 
	* gdk/gdkcolor.h: Add Copyright/License information.

2005-07-11  Matthias Clasen  <mclasen@redhat.com>

	* modules/input/imm-extra.h: Add Copyright/License information.

2005-07-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktexttag.c (gtk_text_tag_class_init) 
	(gtk_text_tag_set_property): Remove the runtime warning about 
	the invisible property, add a warning about possible remaining
	problems to the documentation of the property.  (#66194)
